src2/objects/Case_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Action Item</label>
        <referenceTo>Attribute_Action_Item__c</referenceTo>
        <relationshipLabel>Case Attributes</relationshipLabel>
        <relationshipName>Case_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Domain_Type__c</fullName>
        <formula>Attribute_Name__r.Attribute_Domain__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Domain Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Domain_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Domain Value</label>
        <referenceTo>Attribute_Domain__c</referenceTo>
        <relationshipLabel>Case Attributes</relationshipLabel>
        <relationshipName>Case_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Name</label>
        <referenceTo>Attribute_Definition__c</referenceTo>
        <relationshipLabel>Case Attributes</relationshipLabel>
        <relationshipName>Case_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Attributes</relationshipLabel>
        <relationshipName>Case_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <formula>TEXT( Attribute_Name__r.Data_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multi_PickList_Value__c</fullName>
        <label>Multi PickList Value</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Case Attributes</relationshipLabel>
        <relationshipName>Case_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF(Data_Type__c = &apos;Text&apos;, Text_Value__c, 
	IF(Data_Type__c = &apos;Attribute Domain&apos;,IF(Attribute_Domain_Value__r.Type__c!=&apos;TYPE&apos;, Attribute_Domain_Value__r.Name,&apos;&apos;), 
		IF(Data_Type__c = &apos;Checkbox&apos;, IF(Checkbox_Value__c == true,&apos;true&apos;,&apos;false&apos;), 
		TEXT(Date_Value__c)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Case Attribute Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>